Now that certificate placeholders are in, telling couchdb and nginx where they are.

--- a/conf/couchdb.ini
+++ b/conf/couchdb.ini
@@ -203,7 +203,7 @@ retries_per_request = 10
 ; See the `inet` Erlang module's man page for the full list of options.
 socket_options = [{keepalive, true}, {nodelay, false}]
 ; Path to a file containing the user's certificate.
-cert_file = /tmp/crypt/certs/my.crt
+cert_file = /tmp/crypt/certs/my.pem
 ; Path to file containing user's private PEM encoded key.
 key_file = /tmp/crypt/certs/my.key
 ; String containing the user's password. Only used if the private keyfile is password protected. 
