--- a/conf/couchdb.ini
+++ b/conf/couchdb.ini
@@ -180,7 +180,7 @@ compressible_types = text/*, application/javascript, application/json, applicati
 [replicator]
 db = _replicator
 ; Maximum replicaton retry count can be a non-negative integer or "infinity".
-max_replication_retry_count = 10
+max_replication_retry_count = infinity
 ; More worker processes can give higher network throughput but can also
 ; imply more disk and network IO.
 worker_processes = 4
