--- a/conf/couchdb.ini
+++ b/conf/couchdb.ini
@@ -302,5 +302,5 @@ min_file_size = 131072
 ;    Similar to the preceding example, but a database and its views can be
 ;    compacted in parallel.
 ;
-;_default = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}, {from, "23:00"}, {to, "04:00"}]
+_default = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}]
 
