--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -43,11 +43,11 @@ http {
 
 server {
 
-        # ssl on;
-        # ssl_certificate /tmp/crypt/certs/my.pem; # Reticle - change these three lines if your (encrypted) path is different
-        # ssl_certificate_key /tmp/crypt/certs/my.key;
-        # ssl_client_certificate /tmp/crypt/certs/ca.pem;
-        # ssl_verify_client on;
+        ssl on;
+        ssl_certificate /tmp/crypt/certs/my.pem; # Reticle - change these three lines if your (encrypted) path is different
+        ssl_certificate_key /tmp/crypt/certs/my.key;
+        ssl_client_certificate /tmp/crypt/certs/ca.pem;
+        ssl_verify_client on;
 
         listen *:40120;
         #server_name localhost;
