--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -53,7 +53,7 @@ server {
         #server_name localhost;
 
         location / {
-                proxy_pass http://localhost:50121;
+                proxy_pass http://127.0.0.1:50121;
                 proxy_redirect off;
                 proxy_set_header Host $host;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -61,7 +61,7 @@ server {
         }
 
         location ~ ^/(.*)/_changes {
-                proxy_pass http://localhost:50121;
+                proxy_pass http://127.0.0.1:50121;
                 proxy_redirect off;
                 proxy_buffering off;
                 proxy_set_header Host $host;
