Adding tor 0.2.4.17-rc as a submodule, because we can't get it out of a packaging system for ARM, apparently.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "portalsmash"]
 	path = portalsmash
 	url = https://github.com/ussjoin/portalsmash.git
+[submodule "tor"]
+	path = tor
+	url = https://git.torproject.org/tor.git
