--- a/conf/couchdb.ini
+++ b/conf/couchdb.ini
@@ -1,13 +1,20 @@
+; etc/couchdb/default.ini.tpl.  Generated from default.ini.tpl.in by configure.
+
+; Upgrading CouchDB will overwrite this file.
+[vendor]
+name = The Apache Software Foundation
+version = 1.5.0
+
 [couchdb]
-database_dir = /tmp/crypt/working/couchdb ;/var/lib/couchdb/1.2.0
-view_index_dir = /tmp/crypt/working/couchdb ;/var/lib/couchdb/1.2.0
-util_driver_dir = /usr/lib/couchdb/erlang/lib/couch-1.2.0/priv/lib
+database_dir = /tmp/crypt/working/couchdb; /usr/local/var/lib/couchdb
+view_index_dir = /tmp/crypt/working/couchdb; /usr/local/var/lib/couchdb
+util_driver_dir = /usr/local/lib/couchdb/erlang/lib/couch-1.5.0/priv/lib
 max_document_size = 4294967296 ; 4 GB
+uuid = 6ca79eb938ebe76852fedc494b50cdd4
 os_process_timeout = 5000 ; 5 seconds. for view and external servers.
 max_dbs_open = 100
 delayed_commits = true ; set this to false to ensure an fsync before 201 Created is returned
-uri_file = /tmp/crypt/working/couchdb/couch.uri
-; /var/run/couchdb/couch.uri
+uri_file = /tmp/crypt/working/couchdb/couch.uri ;/usr/local/var/run/couchdb/couch.uri
 ; Method used to compress everything that is appended to database and view index files, except
 ; for attachments (see the attachments section). Available methods are:
 ;
@@ -16,6 +23,12 @@ uri_file = /tmp/crypt/working/couchdb/couch.uri
 ; deflate_[N]  - use zlib's deflate, N is the compression level which ranges from 1 (fastest,
 ;                lowest compression ratio) to 9 (slowest, highest compression ratio)
 file_compression = snappy
+; Higher values may give better read performance due to less read operations
+; and/or more OS page cache hits, but they can also increase overall response
+; time for writes when there are many attachment write requests in parallel.
+attachment_stream_buffer_size = 4096
+
+plugin_dir = /usr/local/lib/couchdb/plugins
 
 [database_compaction]
 ; larger buffer sizes can originate smaller files
@@ -39,22 +52,91 @@ allow_jsonp = false
 ; For more socket options, consult Erlang's module 'inet' man page.
 ;socket_options = [{recbuf, 262144}, {sndbuf, 262144}, {nodelay, true}]
 log_max_chunk_size = 1000000
+enable_cors = false
+
+; Uncomment next line to trigger basic-auth popup on unauthorized requests.
+;WWW-Authenticate = Basic realm="administrator"
+
+; Uncomment next line to set the configuration modification whitelist. Only
+; whitelisted values may be changed via the /_config URLs. To allow the admin
+; to change this value over HTTP, remember to include {httpd,config_whitelist}
+; itself. Excluding it from the list would require editing this file to update
+; the whitelist.
+;config_whitelist = [{httpd,config_whitelist}, {log,level}, {etc,etc}]
 
 [ssl]
 port = 50122
+;cert_file = /full/path/to/server_cert.pem
+;key_file = /full/path/to/server_key.pem
+;password = somepassword
+; set to true to validate peer certificates
+verify_ssl_certificates = false
+; Path to file containing PEM encoded CA certificates (trusted
+; certificates used for verifying a peer certificate). May be omitted if
+; you do not want to verify the peer.
+;cacert_file = /full/path/to/cacertf
+; The verification fun (optional) if not specified, the default
+; verification fun will be used.
+;verify_fun = {Module, VerifyFun}
+; maximum peer certificate depth
+ssl_certificate_max_depth = 3
 
 [log]
 file = /tmp/crypt/working/couchdb/couch.log
 level = info
 include_sasl = true
 
+[log_level_by_module]
+; In this section you can specify any of the four log levels 'none', 'info',
+; 'error' or 'debug' on a per-module basis. See src/*/*.erl for various
+; modules.
+;couch_httpd = error
+
 [couch_httpd_auth]
 authentication_db = _users
 authentication_redirect = /_utils/session.html
+; If you set this to true, you should also uncomment the WWW-Authenticate line
+; above. If you don't configure a WWW-Authenticate header, CouchDB will send
+; Basic realm="server" in order to prevent you getting logged out.
 require_valid_user = false
 timeout = 600 ; number of seconds before automatic logout
 auth_cache_size = 50 ; size is number of cache entries
 allow_persistent_cookies = false ; set to true to allow persistent cookies
+iterations = 10 ; iterations for password hashing
+; comma-separated list of public fields, 404 if empty
+; public_fields =
+
+; To enable Virtual Hosts in CouchDB, add a vhost = path directive. All requests to
+; the Virual Host will be redirected to the path. In the example below all requests
+; to http://example.com/ are redirected to /database.
+; If you run CouchDB on a specific port, include the port number in the vhost:
+; example.com:5984 = /database
+[vhosts]
+;example.com = /database/
+
+[cors]
+credentials = false
+; List of origins separated by a comma, * means accept all
+; Origins must include the scheme: http://example.com
+; You can’t set origins: * and credentials = true at the same time.
+;origins = *
+; List of accepted headers separated by a comma
+; headers =
+; List of accepted methods
+; methods =
+
+
+; Configuration for a vhost
+;[cors:http://example.com]
+; credentials = false
+; List of origins separated by a comma
+; Origins must include the scheme: http://example.com
+; You can’t set origins: * and credentials = true at the same time.
+;origins =
+; List of accepted headers separated by a comma
+; headers =
+; List of accepted methods
+; methods =
 
 [couch_httpd_oauth]
 ; If set to 'true', oauth token and consumer secrets will be looked up
@@ -81,9 +163,9 @@ allow_persistent_cookies = false ; set to true to allow persistent cookies
 use_users_db = false
 
 [query_servers]
-javascript = /usr/bin/couchjs /usr/share/couchdb/server/main.js
-coffeescript = /usr/bin/couchjs /usr/share/couchdb/server/main-coffee.js
-
+javascript = /usr/local/bin/couchjs /usr/local/share/couchdb/server/main.js
+coffeescript = /usr/local/bin/couchjs /usr/local/share/couchdb/server/main-coffee.js
+;nodejs = /usr/local/bin/couchjs-node /path/to/couchdb/share/server/main.js
 
 ; Changing reduce_limit to false will disable reduce_limit.
 ; If you think you're hitting reduce_limit with a "good" reduce function,
@@ -93,7 +175,7 @@ reduce_limit = true
 os_process_limit = 25
 
 [daemons]
-view_manager={couch_view, start_link, []}
+index_server={couch_index_server, start_link, []}
 external_manager={couch_external_manager, start_link, []}
 query_servers={couch_query_servers, start_link, []}
 vhosts={couch_httpd_vhost, start_link, []}
@@ -102,32 +184,39 @@ stats_aggregator={couch_stats_aggregator, start, []}
 stats_collector={couch_stats_collector, start, []}
 uuids={couch_uuids, start, []}
 auth_cache={couch_auth_cache, start_link, []}
-replication_manager={couch_replication_manager, start_link, []}
+replicator_manager={couch_replicator_manager, start_link, []}
 os_daemons={couch_os_daemons, start_link, []}
 compaction_daemon={couch_compaction_daemon, start_link, []}
+; enable SSL support by uncommenting the following line and supply the PEM's below.
+; the default ssl port CouchDB listens on is 6984
+; httpsd = {couch_httpd, start_link, [https]}
 
 [httpd_global_handlers]
 / = {couch_httpd_misc_handlers, handle_welcome_req, <<"Welcome">>}
-favicon.ico = {couch_httpd_misc_handlers, handle_favicon_req, "/usr/share/couchdb/www"}
+favicon.ico = {couch_httpd_misc_handlers, handle_favicon_req, "/usr/local/share/couchdb/www"}
 
-_utils = {couch_httpd_misc_handlers, handle_utils_dir_req, "/usr/share/couchdb/www"}
+_utils = {couch_httpd_misc_handlers, handle_utils_dir_req, "/usr/local/share/couchdb/www"}
 _all_dbs = {couch_httpd_misc_handlers, handle_all_dbs_req}
 _active_tasks = {couch_httpd_misc_handlers, handle_task_status_req}
 _config = {couch_httpd_misc_handlers, handle_config_req}
-_replicate = {couch_httpd_replicator, handle_req}
+_replicate = {couch_replicator_httpd, handle_req}
 _uuids = {couch_httpd_misc_handlers, handle_uuids_req}
 _restart = {couch_httpd_misc_handlers, handle_restart_req}
 _stats = {couch_httpd_stats_handlers, handle_stats_req}
 _log = {couch_httpd_misc_handlers, handle_log_req}
 _session = {couch_httpd_auth, handle_session_req}
 _oauth = {couch_httpd_oauth, handle_oauth_req}
+_db_updates = {couch_dbupdates_httpd, handle_req}
+_plugins = {couch_plugins_httpd, handle_req}
+;_google = {couch_httpd_proxy, handle_proxy_req, <<"http://www.google.com">>}
 
 [httpd_db_handlers]
-_view_cleanup = {couch_httpd_db, handle_view_cleanup_req}
+_all_docs = {couch_mrview_http, handle_all_docs_req}
+_changes = {couch_httpd_db, handle_changes_req}
 _compact = {couch_httpd_db, handle_compact_req}
 _design = {couch_httpd_db, handle_design_req}
-_temp_view = {couch_httpd_view, handle_temp_view_req}
-_changes = {couch_httpd_db, handle_changes_req}
+_temp_view = {couch_mrview_http, handle_temp_view_req}
+_view_cleanup = {couch_mrview_http, handle_cleanup_req}
 
 ; The external module takes an optional argument allowing you to narrow it to a
 ; single script. Otherwise the script name is inferred from the first path section
@@ -136,24 +225,25 @@ _changes = {couch_httpd_db, handle_changes_req}
 ; _external = {couch_httpd_external, handle_external_req}
 
 [httpd_design_handlers]
-_view = {couch_httpd_view, handle_view_req}
-_show = {couch_httpd_show, handle_doc_show_req}
-_list = {couch_httpd_show, handle_view_list_req}
-_info = {couch_httpd_db,   handle_design_info_req}
+_compact = {couch_mrview_http, handle_compact_req}
+_info = {couch_mrview_http, handle_info_req}
+_list = {couch_mrview_show, handle_view_list_req}
 _rewrite = {couch_httpd_rewrite, handle_rewrite_req}
-_update = {couch_httpd_show, handle_doc_update_req}
+_show = {couch_mrview_show, handle_doc_show_req}
+_update = {couch_mrview_show, handle_doc_update_req}
+_view = {couch_mrview_http, handle_view_req}
 
 ; enable external as an httpd handler, then link it with commands here.
 ; note, this api is still under consideration.
 ; [external]
 ; mykey = /path/to/mycommand
 
-; Here you can setup commands for CouchDB to manage
-; while it is alive. It will attempt to keep each command
-; alive if it exits.
-; [os_daemons]
-; some_daemon_name = /path/to/script -with args
-
+[os_daemons]
+; For any commands listed here, CouchDB will attempt to ensure that
+; the process remains alive. Daemons should monitor their environment
+; to know when to exit. This can most easily be accomplished by exiting
+; when stdin is closed.
+;foo = /path/to/command -with args
 
 [uuids]
 ; Known algorithms:
@@ -165,7 +255,12 @@ _update = {couch_httpd_show, handle_doc_update_req}
 ;     random prefix is regenerated and the process starts over.
 ;   utc_random - Time since Jan 1, 1970 UTC with microseconds
 ;     First 14 characters are the time in hex. Last 18 are random.
+;   utc_id - Time since Jan 1, 1970 UTC with microseconds, plus utc_id_suffix string
+;     First 14 characters are the time in hex. uuids/utc_id_suffix string value is appended to these.
 algorithm = sequential
+; The utc_id_suffix value will be appended to uuids generated by the utc_id algorithm.
+; Replicating instances should have unique utc_id_suffix values to ensure uniqueness of utc_id ids.
+utc_id_suffix =
 
 [stats]
 ; rate is in milliseconds
@@ -192,9 +287,9 @@ http_connections = 20
 ; HTTP connection timeout per replication.
 ; Even for very fast/reliable networks it might need to be increased if a remote
 ; database is too busy.
-connection_timeout = 90000
+connection_timeout = 300000
 ; If a request fails, the replicator will retry it up to N times.
-retries_per_request = 10
+retries_per_request = 20
 ; Some socket options that might boost performance in some scenarios:
 ;       {nodelay, boolean()}
 ;       {sndbuf, integer()}
@@ -206,16 +301,29 @@ socket_options = [{keepalive, true}, {nodelay, false}]
 cert_file = /tmp/crypt/certs/my.pem
 ; Path to file containing user's private PEM encoded key.
 key_file = /tmp/crypt/certs/my.key
-; String containing the user's password. Only used if the private keyfile is password protected. 
+; String containing the user's password. Only used if the private keyfile is password protected.
 ;password = somepassword
 ; Set to true to validate peer certificates.
 ; MUST LEAVE AS FALSE BECAUSE THIS FEATURE DOES NOT ACTUALLY WORK. Bad CouchDB, no cookie.
 ; If you use it, it causes a complete core dump.
+; Use Nginx to validate peer certificates.
 verify_ssl_certificates = false
 ; File containing a list of peer trusted certificates (in the PEM format).
 ;ssl_trusted_certificates_file = /etc/ssl/certs/ca-certificates.crt
 ; Maximum peer certificate depth (must be set even if certificate validation is off).
 ssl_certificate_max_depth = 3
+
+[update_notification]
+;unique notifier name=/full/path/to/exe -with "cmd line arg"
+
+; To create an admin account uncomment the '[admins]' section below and add a
+; line in the format 'username = password'. When you next start CouchDB, it
+; will change the password to a hash (so that your passwords don't linger
+; around in plain-text files). You can add more admin accounts with more
+; 'username = password' lines. Don't forget to restart CouchDB after
+; changing this.
+[admins]
+;admin = mysecretpassword
 
 [compaction_daemon]
 ; The delay, in seconds, between each check for which database and view indexes
@@ -302,5 +410,6 @@ min_file_size = 131072
 ;    Similar to the preceding example, but a database and its views can be
 ;    compacted in parallel.
 ;
-_default = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}]
+;_default = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}, {from, "23:00"}, {to, "04:00"}]
 
+_default = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}]
